# blobman

./: .gitignore  README.md  pyproject.toml
.blobman/: config.json  lock.json
blobman/: __init__.py
